[gd_scene load_steps=3 format=3 uid="uid://dl1gbeiwp4enh"]

[ext_resource type="Script" uid="uid://bpqojidkfgwgv" path="res://focus/scripts/settings.gd" id="1_w5cnb"]
[ext_resource type="Texture2D" uid="uid://cck4kgfq6ebub" path="res://focus/png/exit.png" id="2_paeak"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_w5cnb")

[node name="basemenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="quit" type="Button" parent="basemenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_bottom = 150.0
grow_horizontal = 0
icon = ExtResource("2_paeak")
icon_alignment = 1
expand_icon = true

[node name="Audio" type="Button" parent="basemenu"]
layout_mode = 0
offset_left = 428.0
offset_top = 25.0
offset_right = 481.0
offset_bottom = 56.0
scale = Vector2(2, 2)
text = "Audio"

[node name="Graphics" type="Button" parent="basemenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 622.0
offset_top = 25.0
offset_right = 699.0
offset_bottom = 56.0
grow_horizontal = 2
scale = Vector2(2, 2)
text = "Graphics"

[node name="Visual" type="Button" parent="basemenu"]
layout_mode = 0
offset_left = 852.0
offset_top = 25.0
offset_right = 904.0
offset_bottom = 56.0
scale = Vector2(2, 2)
text = "Video"

[node name="Controls" type="Button" parent="basemenu"]
layout_mode = 0
offset_left = 1312.0
offset_top = 25.0
offset_right = 1386.0
offset_bottom = 56.0
scale = Vector2(2, 2)
text = "Controls"

[node name="visualscroll" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(125, 100)
scroll_horizontal_custom_step = 1.0
scroll_vertical_custom_step = 1.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="visualbox" type="VBoxContainer" parent="visualscroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="fullscreen" type="CheckButton" parent="visualscroll/visualbox"]
layout_mode = 2
text = "Fullscreen"

[node name="resolution" type="OptionButton" parent="visualscroll/visualbox"]
layout_mode = 2
selected = 2
item_count = 6
popup/item_0/text = "1920-1080"
popup/item_0/id = 0
popup/item_1/text = "1600-900"
popup/item_1/id = 1
popup/item_2/text = "1152-648"
popup/item_2/id = 2
popup/item_3/text = "720-600"
popup/item_3/id = 3
popup/item_4/text = "600, 540"
popup/item_4/id = 4
popup/item_5/text = "100,50"
popup/item_5/id = 5

[node name="fovtoggle" type="CheckButton" parent="visualscroll/visualbox"]
layout_mode = 2
text = "Fovtoggle"

[node name="headbobtoggle" type="CheckButton" parent="visualscroll/visualbox"]
layout_mode = 2
text = "Headbobtoggle"

[node name="Label" type="Label" parent="visualscroll/visualbox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Gamma"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="visualscroll/visualbox"]
layout_mode = 2
max_value = 2.0
step = 0.1

[node name="audioscroll" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(125, 100)

[node name="audiobox" type="VBoxContainer" parent="audioscroll"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="audioscroll/audiobox"]

[node name="graphicscroll" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(125, 100)

[node name="graphicsbox" type="VBoxContainer" parent="graphicscroll"]
layout_mode = 2

[node name="controlscroll" type="ScrollContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
pivot_offset = Vector2(125, 100)

[node name="controlsbox" type="VBoxContainer" parent="controlscroll"]
layout_mode = 2

[connection signal="pressed" from="basemenu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="basemenu/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="basemenu/Graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="basemenu/Visual" to="." method="_on_visual_pressed"]
[connection signal="pressed" from="basemenu/Controls" to="." method="_on_controls_pressed"]
[connection signal="toggled" from="visualscroll/visualbox/fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="visualscroll/visualbox/resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="visualscroll/visualbox/fovtoggle" to="." method="_on_fovtoggle_toggled"]
[connection signal="toggled" from="visualscroll/visualbox/headbobtoggle" to="." method="_on_headbobtoggle_toggled"]
[connection signal="drag_ended" from="visualscroll/visualbox/HSlider" to="." method="_on_h_slider_drag_ended"]
